[gd_scene load_steps=10 format=2]

[ext_resource path="res://screens/Options/Options.gd" type="Script" id=1]
[ext_resource path="res://Art/theme/theme.tres" type="Theme" id=2]
[ext_resource path="res://PixelFont-L.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="OptionsWindow" type="WindowDialog"]
visible = true
margin_top = 20.0
margin_right = 481.0
margin_bottom = 261.0
theme = ExtResource( 2 )
window_title = "Settings"
script = ExtResource( 1 )

[node name="DevspeedCheckBox" type="CheckBox" parent="."]
unique_name_in_owner = true
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -102.0
margin_top = -25.0
margin_right = -4.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 3 )
text = "dev speed"

[node name="SecretButton" type="Button" parent="."]
margin_right = 15.0
margin_bottom = 15.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
flat = true

[node name="Control" type="Control" parent="."]
margin_left = 8.0
margin_top = 14.0
margin_right = 462.0
margin_bottom = 48.0

[node name="VolumeSlider" type="HSlider" parent="Control"]
unique_name_in_owner = true
margin_left = 59.0
margin_top = 11.0
margin_right = 424.0
margin_bottom = 27.0

[node name="MuteCheckBox" type="CheckBox" parent="Control"]
unique_name_in_owner = true
margin_top = 7.0
margin_right = 60.0
margin_bottom = 31.0
text = "Mute"

[node name="Title" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -23.5
margin_top = -7.0
margin_right = 23.5
margin_bottom = 9.0
text = "Volume"

[node name="VolumeLabel" type="Label" parent="Control"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -26.0
margin_top = 11.0
margin_bottom = 27.0
text = "0"
align = 1

[node name="HSeparator2" type="HSeparator" parent="."]
margin_left = 8.0
margin_top = 46.0
margin_right = 470.0
margin_bottom = 50.0

[connection signal="ready" from="." to="." method="_on_Control_ready"]
[connection signal="toggled" from="DevspeedCheckBox" to="." method="_on_DevspeedCheckBox_toggled"]
[connection signal="pressed" from="SecretButton" to="." method="_on_SecretButton_pressed"]
[connection signal="value_changed" from="Control/VolumeSlider" to="." method="_on_VolumeSlider_value_changed"]
[connection signal="toggled" from="Control/MuteCheckBox" to="." method="_on_MuteCheckBox_toggled"]
